hphp/hack/test/pocket_universes/naming/traits.bad.php
<?hh
<<file:__EnableUnstableFeatures(
    'pocket_universes',
)>>
trait MyTrait {
  enum E {
    case type T;
  }
}

trait MyTrait2 {
  enum E {
    case string v;
  }
}
